manifests/element-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
  labels:
    app: element-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element-web
  template:
    metadata:
      labels:
        app: element-web
    spec:
      containers:
      - name: element-web 
        image: vectorim/element-web:v1.11.91
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: element-web-config
          mountPath: /app/config.json
          subPath: config.json
          readOnly: true
      volumes:
      - name: element-web-config
        configMap:
          name: element-web-config
