manifests/element-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*.chat.la-suite.apps.digilab.network"
spec:
  rules:
    - host: "element.chat.la-suite.apps.digilab.network"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 8000
  tls:
    - hosts:
        - element.chat.la-suite.apps.digilab.network
      secretName: element-tls
